--- a/package.json
+++ b/package.json
@@ -1,45 +1,50 @@
 {
-    "name": "nome-do-projeto",
-    "version": "1.0.0",
-    "description": "Descrição do projeto",
-    "main": "node_modules/expo/AppEntry.js",
-    "scripts": {
-        "start": "expo start",
-        "android": "expo start --android",
-        "ios": "expo start --ios",
-        "web": "expo start --web",
-        "eject": "expo eject"
-    },
-    "author": "Seu Nome",
-    "license": "ISC",
-    "dependencies": {
-        "@react-native-async-storage/async-storage": "1.17.11",
-        "@react-native-community/masked-view": "^0.1.11",
-        "@react-navigation/native": "^6.1.6",
-        "@react-navigation/native-stack": "^6.9.12",
-        "@react-navigation/stack": "^6.3.16",
-        "body-parser": "^1.20.2",
-        "expo": "^48.0.17",
-        "express": "^4.18.2",
-        "firebase": "^9.22.0",
-        "metro": "^0.76.4",
-        "metro-core": "^0.76.4",
-        "npm": "^9.6.6",
-        "react": "^18.2.0",
-        "react-icons": "^4.8.0",
-        "react-native": "0.71.8",
-        "react-native-animatable": "^1.3.3",
-        "react-native-fast-image": "^8.6.3",
-        "react-native-gesture-handler": "~2.9.0",
-        "react-native-gif": "^1.0.3",
-        "react-native-reanimated": "~2.14.4",
-        "react-native-safe-area-context": "4.5.0",
-        "react-native-screens": "~3.20.0",
-        "react-native-vector-icons": "^9.2.0"
-    },
-    "devDependencies": {
-        "@babel/core": "^7.12.9",
-        "babel-preset-expo": "^9.2.0"
-    },
-    "private": true
+  "name": "nome-do-projeto",
+  "version": "1.0.0",
+  "description": "Descrição do projeto",
+  "scripts": {
+    "start": "expo start --dev-client",
+    "android": "expo run:android",
+    "ios": "expo run:ios",
+    "web": "expo start --web",
+    "eject": "expo eject"
+  },
+  "author": "Seu Nome",
+  "license": "ISC",
+  "dependencies": {
+    "@react-native-async-storage/async-storage": "1.17.11",
+    "@react-native-community/masked-view": "^0.1.11",
+    "@react-native-firebase/app": "^17.5.0",
+    "@react-navigation/native": "^6.1.6",
+    "@react-navigation/native-stack": "^6.9.12",
+    "@react-navigation/stack": "^6.3.16",
+    "@types/react": "~18.0.27",
+    "body-parser": "^1.20.2",
+    "expo": "^48.0.17",
+    "expo-sharing": "~11.2.2",
+    "expo-splash-screen": "~0.18.2",
+    "expo-status-bar": "~1.4.4",
+    "express": "^4.18.2",
+    "firebase": "^9.22.0",
+    "metro": "^0.76.4",
+    "metro-core": "^0.76.4",
+    "npm": "^9.6.6",
+    "react": "18.2.0",
+    "react-icons": "^4.8.0",
+    "react-native": "0.71.8",
+    "react-native-animatable": "^1.3.3",
+    "react-native-fast-image": "^8.6.3",
+    "react-native-gesture-handler": "~2.9.0",
+    "react-native-gif": "^1.0.3",
+    "react-native-reanimated": "~2.14.4",
+    "react-native-safe-area-context": "4.5.0",
+    "react-native-screens": "~3.20.0",
+    "react-native-vector-icons": "^9.2.0",
+    "typescript": "^4.9.4"
+  },
+  "devDependencies": {
+    "@babel/core": "^7.12.9",
+    "babel-preset-expo": "^9.2.0"
+  },
+  "private": true
 }
